--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://postgres.wujlimwtkctsskhfiwiz:Kusuma%40supabase1@aws-1-ap-south-1.pooler.supabase.com:5432/postgres"
+DATABASE_URL="postgresql://postgres.wujlimwtkctsskhfiwiz:Kusuma%40supabase1@aws-1-ap-south-1.pooler.supabase.com:5432/postgres?sslmode=require"
 
